--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       </nav>
         <ul class="contacts">
           <li class="contacts-item"><a href="mailto:info@example.com" class="contacts-link">
-            <svg class="icon-envelope" width="16" height="12">
+            <svg class="contacts-icon" width="16" height="12">
               <use href="./images/symbol-defs.svg#icon-envelope"></use>
             </svg>info@example.com</a>
           </li>
           <li class="contacts-item"><a href="tel:+380991111111" class="contacts-link">
-            <svg class="icon-smartphone" width="10" height="16">
+            <svg class="contacts-icon" width="10" height="16">
               <use href="./images/symbol-defs.svg#icon-smartphone"></use>
             </svg>+38 099 111 11 11</a>
           </li>
@@ -127,122 +127,154 @@
       <section class="section section-team">
        <div class="container">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team">
+         <ul class="team">
           <li class="team-item">
-            <img src="./images/1.jpg" alt="Фото Игорь Демьяненко" width="270"/>
-           <div class="team-content">
-            <h3 class="team-title">Игорь Демьяненко</h3>
-            <p class="job-description">Product Designer</p>
-           </div> 
-           <div class="social-team">
-             <a class="social-link" href="">
-              <svg class="social-icon">
-                <use href="./images/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-             </a>
-             <a class="social-link" href="">
-              <svg class="social-icon">
-                <use href="./images/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-             </a>
-             <a class="social-link" href="">
-              <svg class="social-icon">
-                <use href="./images/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-             </a>
-             <a class="social-link" href="">
-              <svg class="social-icon">
-                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-             </a>    
-           </div>
+           <img src="./images/1.jpg" alt="Фото Игорь Демьяненко" width="270"/>
+            <div class="team-content">
+             <h3 class="team-title">Игорь Демьяненко</h3>
+               <p class="job-description">Product Designer</p>            
+                <ul class="social-team">
+                 <li class="social-link-icon">
+                  <a class="social-link" href="">
+                   <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                   </svg>
+                  </a>
+                 </li>
+                 <li class="social-link-icon">
+                  <a class="social-link" href="">
+                   <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                   </svg>
+                  </a>
+                 </li>
+                 <li class="social-link-icon">
+                  <a class="social-link" href="">
+                   <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                   </svg>
+                  </a>
+                 </li>
+                 <li class="social-link-icon">
+                  <a class="social-link" href="">
+                   <svg class="social-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                   </svg>
+                  </a> 
+                 </li>   
+                </ul>
+            </div> 
           </li>
           <li class="team-item">
-            <img src="./images/2.jpg" alt="Фото Ольга Репина" width="270"/>
-           <div class="team-content">
-            <h3 class="team-title">Ольга Репина</h3>
-            <p class="job-description">Frontend Developer</p>
-           </div>
-           <div class="social-team">
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-instagram"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-twitter"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-facebook"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-             </svg>
-            </a>    
-          </div>
+           <img src="./images/2.jpg" alt="Фото Ольга Репина" width="270"/>
+            <div class="team-content">
+             <h3 class="team-title">Ольга Репина</h3>
+              <p class="job-description">Frontend Developer</p>
+               <ul class="social-team">
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                 </a> 
+                </li>
+               </ul>
+            </div>
           </li>
           <li class="team-item">
-            <img src="./images/3.jpg" alt="Фото Николай Тарасов" width="270"/>
-           <div class="team-content">
-            <h3 class="team-title">Николай Тарасов</h3>
-            <p class="job-description">Marketing</p>
-           </div>
-           <div class="social-team">
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-instagram"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-twitter"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-facebook"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-             </svg>
-            </a>    
-          </div>
+           <img src="./images/3.jpg" alt="Фото Николай Тарасов" width="270"/>
+            <div class="team-content">
+             <h3 class="team-title">Николай Тарасов</h3>
+              <p class="job-description">Marketing</p>
+               <ul class="social-team">
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                 </a>  
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-item">
-            <img src="./images/4.jpg" alt="Фото Михаил Ермаков" width="270"/>
-           <div class="team-content">
-            <h3 class="team-title">Михаил Ермаков</h3>
-            <p class="job-description">UI Designer</p>
-           </div>
-           <div class="social-team">
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-instagram"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-twitter"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-facebook"></use>
-             </svg>
-            </a>
-            <a class="social-link" href="">
-             <svg class="social-icon">
-               <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-             </svg>
-            </a>    
-          </div>
+           <img src="./images/4.jpg" alt="Фото Михаил Ермаков" width="270"/>
+            <div class="team-content">
+             <h3 class="team-title">Михаил Ермаков</h3>
+              <p class="job-description">UI Designer</p>
+               <ul class="social-team">
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                 </a>
+                </li>
+                <li class="social-link-icon">
+                 <a class="social-link" href="">
+                  <svg class="social-icon">
+                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                 </a>    
+                </li>
+               </ul>
+            </div>
           </li>
         </ul>
        </div>
@@ -323,28 +355,28 @@
      <ul class="social">
       <li class="social-footer-item">
        <a class="social-link" href="">
-        <svg class="social-icon">
+        <svg class="social-footer-icon">
           <use href="./images/symbol-defs.svg#icon-instagram"></use>
         </svg>
        </a>
       </li>
       <li class="social-footer-item">
         <a class="social-link" href="">
-         <svg class="social-icon">
+         <svg class="social-footer-icon">
            <use href="./images/symbol-defs.svg#icon-twitter"></use>
          </svg>
         </a>
        </li>
        <li class="social-footer-item">
         <a class="social-link" href="">
-         <svg class="social-icon">
+         <svg class="social-footer-icon">
            <use href="./images/symbol-defs.svg#icon-facebook"></use>
          </svg>
         </a>
        </li>
        <li class="social-footer-item">
         <a class="social-link" href="">
-         <svg class="social-icon">
+         <svg class="social-footer-icon">
            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
          </svg>
         </a>
