--- a/portfolio.html
+++ b/portfolio.html
@@ -31,12 +31,12 @@
       </nav>
         <ul class="contacts">
           <li class="contacts-item"><a href="mailto:info@example.com" class="contacts-link">
-            <svg class="icon-envelope" width="16" height="12">
+            <svg class="contacts-icon" width="16" height="12">
               <use href="./images/symbol-defs.svg#icon-envelope"></use>
             </svg>info@example.com</a>
           </li>
           <li class="contacts-item"><a href="tel:+380991111111" class="contacts-link">
-            <svg class="icon-smartphone" width="10" height="16">
+            <svg class="contacts-icon" width="10" height="16">
               <use href="./images/symbol-defs.svg#icon-smartphone"></use>
             </svg>+38 099 111 11 11</a>
           </li>
@@ -161,28 +161,28 @@
      <ul class="social">
       <li class="social-footer-item">
        <a class="social-link" href="">
-        <svg class="social-icon">
+        <svg class="social-footer-icon">
           <use href="./images/symbol-defs.svg#icon-instagram"></use>
         </svg>
        </a>
       </li>
       <li class="social-footer-item">
         <a class="social-link" href="">
-         <svg class="social-icon">
+         <svg class="social-footer-icon">
            <use href="./images/symbol-defs.svg#icon-twitter"></use>
          </svg>
         </a>
        </li>
        <li class="social-footer-item">
         <a class="social-link" href="">
-         <svg class="social-icon">
+         <svg class="social-footer-icon">
            <use href="./images/symbol-defs.svg#icon-facebook"></use>
          </svg>
         </a>
        </li>
        <li class="social-footer-item">
         <a class="social-link" href="">
-         <svg class="social-icon">
+         <svg class="social-footer-icon">
            <use href="./images/symbol-defs.svg#icon-linkedin"></use>
          </svg>
         </a>
